--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .App {
-  border: 4px solid black;
-  margin: auto;
-  margin-top: 4vh;
-  box-sizing: border-box;
-  width: 50vw;
-  height: 50vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+}
+
+@media screen and (orientation:landscape) and (max-width: 1024px){
+  .App {
+    flex-direction: column;
+  }
+}
+
+@media screen and (orientation:portrait) {
+  .App {
+    flex-direction: column;
+  }
 }
