--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
 .App {
+  /* border: 4px solid orange; */
+  margin-top: 14vh;
+  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (orientation:landscape) and (max-width: 1024px){
-  .App {
-    flex-direction: column;
-  }
 }
 
 @media screen and (orientation:portrait) {
-  .App {
-    flex-direction: column;
-  }
 }
