--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,22 @@
 /* For page wide styling only */
 
 :root {
-  --background-color: black;
-  --primary-color:  rgb(32, 206, 49);
+  --background-color: rgb(0, 0, 0);
+  /* --primary-color:  rgb(32, 206, 49); */
+  --primary-color:  rgb(26, 168, 33);
   --secondary-color: white;
   --active-color: blue;
-  /* --site-font: Cour */
+}
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
   font-size: 100%;
-  /* font-family: var(--site-font); */
   font-family:'Courier New', Courier, monospace;
   background-color: var(--background-color);
   color: var(--primary-color);
