--- a/src/pages/Code/CodeProject/CodeInfo/CodeInfo.css
+++ b/src/pages/Code/CodeProject/CodeInfo/CodeInfo.css
@@ -40,7 +40,7 @@
 }
 
 .code-url a {
-  color: blue;
+  color: var(--primary-color);
 }
 
 @media screen and (orientation:landscape) and (max-width: 1024px){
