--- a/src/nav/NavCollapse/NavCollapse.css
+++ b/src/nav/NavCollapse/NavCollapse.css
@@ -1,5 +1,5 @@
 .NavCollapse {
-  border: 4px solid cyan;
+  border: 8px solid grey;
   background-color: black;
   box-sizing: border-box;
   width: 100%;
@@ -30,11 +30,4 @@
   flex-direction: column;
   max-height: 60vh;
   overflow-y: auto;
-}
-
-@media screen and (orientation:landscape) and (max-width: 1024px){
-
-}
-
-@media screen and (orientation:portrait) {
 }
