--- a/src/nav/NavFull/NavFull.css
+++ b/src/nav/NavFull/NavFull.css
@@ -1,5 +1,6 @@
 .NavFull {
-  border: 4px solid grey;
+  border: 8px solid grey;
+  background-color: black;
   width: 100%;
   display: flex;
   flex-direction: row;
