--- a/page/styles/styles.css
+++ b/page/styles/styles.css
@@ -1,11 +1,12 @@
 :root {
-    --primary-color: #fff;
-    --secondary-color: #ffb446;
-    --anchor-color: #5650BE;
-    --font-color: #222;
-    --anchor-color: #5650be;
-    --marker-color: #ffb345;
-    --border-color: darkgrey;
+  --nav-margin: 12vh;
+  --anchor-color: #5650BE;
+  --font-color: #222;
+  --border-color: black;
+  --background-color: white;
+  --primary-color:  rgb(32, 206, 49);
+  --secondary-color: white;
+  --active-color: blue;
 }
   
 html {
@@ -18,14 +19,80 @@ html {
 
 body {
   margin: 0;
-  border: 4px solid var(--border-color);
   font-size: 100%;
   font-family: 'Courier New', Courier, monospace;
+  background-color: var(--background-color);
+  color: var(--primary-color);
 }
 
 nav {
+  /* margin: 1em; */
   border: 4px solid var(--border-color);
   height: 10vh;
 }
 
+section {  
+  margin: 1em;
+  border: 4px solid var(--border-color);
+}
 
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+a:hover {
+  text-decoration: none;
+  color: var(--active-color);
+}
+
+button:hover {
+  cursor: pointer;
+  color: var(--active-color);
+  border-color: var(--active-color);
+}
+
+.onclick:hover {
+  cursor: pointer;
+}
+
+.page-header {
+  font-size: xxx-large;
+}
+
+.page-content {
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;  
+}
+
+.home-img {
+  width: 90vw;
+  height: 60vh;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.home-img img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (orientation:landscape) and (max-width: 1024px){
+  .page-content {
+    margin-top: 5em;
+    margin-left: 0;
+  }
+}
+
+@media screen and (orientation:portrait) {
+  .page-content {
+    margin-top: 5em;
+    margin-left: 0;
+  }
+}
